--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <!--  Font Awesome -->
   <link 
     rel="stylesheet" 
@@ -12,7 +12,7 @@
     crossorigin="anonymous" 
     referrerpolicy="no-referrer" />
   <!--  -->
-  <script src="/js/script.js" defer></script>
+  <script src="js/script.js" defer></script>
   <title>To Do List</title>
 </head>
 <body>
