--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <!-- Container -->
   <div class="todo-container">
     <header>
+      <h1>Lista de tarefas</h1>
     </header>
     <form id="todo-form">
       <p>Adicione sua tarefa:</p>
